Remove java aggressivesopts